--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@
 server.port=9030
 spring.mvc.view.prefix= /WEB-INF/jsp
 spring.mvc.view.suffix= .jsp
+
+spring.datasource.url=jdbc:mysql://localhost/onlineshopping
+spring.datasource.username=tekane
+spring.datasource.password=123456
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
