--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9030
 spring.mvc.view.prefix= /WEB-INF/jsp
 spring.mvc.view.suffix= .jsp
 
-spring.datasource.url=jdbc:mysql://localhost/onlineshopping
+spring.datasource.url=jdbc:mysql://localhost/onlineStore
 spring.datasource.username=tekane
 spring.datasource.password=123456
 
