--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.url=jdbc:mysql://localhost/onlineStore
 spring.datasource.username=tekane
 spring.datasource.password=123456
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
