--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=123456
 
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+server.error.whitelabel.enabled=false
