--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,18 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 
 server.error.whitelabel.enabled=false
+
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=500MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=500MB
+
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+#file.upload-dir=/Users/callicoder/uploads
